kubernetes/applications/apple-health/ingester.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-health-ingester
  namespace: apple-health
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apple-health-ingester
  template:
    metadata:
      labels:
        app: apple-health-ingester
    spec:
      containers:
        - name: apple-health-ingester
          image: irvinlim/apple-health-ingester:v0.5.0
          args:
            - --backend.influxdb
            - --http.listenAddr=:8080
            - --http.authToken=$(HTTP_AUTH_TOKEN)
            - --influxdb.serverURL=http://influxdb.apple-health.svc.cluster.local:8086
            - --influxdb.authToken=$(INFLUXDB_AUTH_TOKEN)
            - --influxdb.orgName=apple-health
            - --influxdb.metricsBucketName=apple-health
            - --influxdb.workoutsBucketName=apple-health
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: apple-health-ingester
  namespace: apple-health
spec:
  selector:
    app: apple-health-ingester
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apple-health-ingester
  namespace: apple-health
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: apple-health-ingest.toof.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apple-health-ingester
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apple-health-ingester
  namespace: apple-health
spec:
  podSelector:
    matchLabels:
      app: apple-health-ingester
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudflare
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: influxdb
      ports:
        - protocol: TCP
          port: 8086
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
